--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,303 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 .visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+
+
+/* Font 
+    font-family: 'Poppins', sans-serif;
+*/
+
+/* Colors
+    Primary
+        - Cyan: hsl(180, 66%, 49%)
+        - Dark Violet: hsl(257, 27%, 26%)
+    Secondary
+        - Red: hsl(0, 87%, 67%)
+    Neutral
+        - Gray: hsl(0, 0%, 75%)
+        - Grayish Violet: hsl(257, 7%, 63%)
+        - Very Dark Blue: hsl(255, 11%, 22%)
+        - Very Dark Violet: hsl(260, 8%, 14%)
+*/
+
+
+/* General Styles */
+
+html,
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    overflow-x: hidden;
+}
+
+.wrapper {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+h1,
+h2,
+h3 {
+    color: hsl(255, 11%, 22%);
+}
+
+p,
+a {
+    color:hsl(257, 7%, 63%);
+}
+
+p {
+    line-height: 1.7rem;
+}
+
+a {
+    text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+p,
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    display: flex;
+}
+
+li {
+    list-style-type: none;
+}
+
+.button {
+    color: #FFF;
+    background-color: hsl(180, 66%, 49%);
+    padding: 13px 30px;
+    border-radius: 25px;
+}
+
+.button,
+nav a {
+    font-weight: 700;
+}
+
+a:hover {
+    color: hsl(260, 8%, 14%);
+}
+
+.button:hover {
+    color: #FFF;
+    background-color: hsl(180, 66%, 69%);
+}
+
+button.button {
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+
+/* Header Styling */
+
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.leftNav {
+    display: flex;
+    flex-direction: row;
+}
+
+.menu {
+    align-items: center;
+}
+
+.userLogin li {
+    margin-left: 40px;
+}
+
+.menu li {
+    margin-left: 40px;
+}
+
+.mainHeader {
+    display: flex;
+    height: 80vh;
+}
+
+.headerText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 63%;
+}
+
+.headerText p {
+    width: 70%;
+    font-size: 1.2rem;
+}
+
+h1 {
+    font-size: 4.5rem;
+}
+
+.headerText .getStartedButton {
+    margin-top: 30px;
+}
+
+.headerImg {
+    position: absolute;
+    width: 45%;
+    margin-top: 60px;
+    right: -130px;
+}
+
+/* Main Styling */
+
+main {
+    background-color: hsl(256, 30%, 95%);
+}
+
+/* Form Styling */
+
+.formSection {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    background-color: hsl(257, 27%, 26%);
+    background-image: url('/images/bg-shorten-desktop.svg');
+    background-size: cover;
+    height: 180px;
+    top: -90px;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.form {
+    display: flex;
+    width: 100%;
+    height: 60px;
+    margin: 0 50px;
+}
+
+input {
+    flex: 1;
+    border-radius: 10px;
+    border: none;
+    margin-right: 30px;
+    padding-left: 30px;
+}
+
+
+
+/* Statistics Styling */
+
+.statistics {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 100px;
+}
+
+.mainContentText {
+    text-align: center;
+    width: 50%;
+}
+
+.modals {
+    align-items: center;
+}
+
+.modal {
+    background-color: #FFF;
+    border-radius: 5px;
+    margin-right: 30px;
+    padding: 0 35px 35px 35px;
+}
+
+.modal2 {
+    margin-top: 80px;
+}
+
+.modal3 {
+    margin-top: 160px;
+}
+
+.image {
+    position: relative;
+    top: -40px;
+    width: 80px;
+    height: 80px;
+    padding: 20px;
+    border-radius: 50%;
+    background-color: hsl(257, 27%, 26%);
+}
+
+.boostSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: hsl(257, 27%, 26%);
+    background-image: url('/images/bg-boost-desktop.svg');
+    background-size: cover;
+    height: 300px;
+    width: 100%;
+}
+
+.boostSection h2 {
+    color: #FFF;
+}
+
+
+
+/* Footer Styling */
+
+footer {
+    background-color: hsl(260, 8%, 14%);
+    color: #FFF;
+    margin: 0;
+    padding: 0;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 60px 0;
+}
+
+footer a:hover {
+    color: hsl(180, 66%, 49%);
+}
+
+.footerLogo img {
+    filter: invert(100%) sepia(1%) saturate(0%) hue-rotate(154deg) brightness(103%) contrast(101%);
+}
+
+.footerNav {
+    display: flex;
+}
+
+.footerNav ul {
+    display: flex;
+    flex-direction: column;
+    margin-right: 60px;
+}
