--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,7 @@ main {
 
 .form {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     height: 60px;
     margin: 0 50px;
@@ -209,6 +210,51 @@ input {
     border: none;
     margin-right: 30px;
     padding-left: 30px;
+}
+
+
+/* Link Results Styling */
+
+.links {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.link {
+    display: flex;
+    justify-content: space-between;
+    background-color: #FFF;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+.link div {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.originalLink {
+    color: hsl(260, 8%, 14%);
+}
+
+.shortLink {
+    color: hsl(180, 66%, 49%);
+}
+
+.copyButton {
+    border: none;
+    color: #FFF;
+    background-color: hsl(180, 66%, 49%);
+    border-radius: 8px;
+    padding: 10px 30px;
+    cursor: pointer;
+}
+
+.copyButton:hover {
+    background-color: hsl(180, 66%, 69%);
 }
 
 
@@ -230,10 +276,13 @@ input {
 
 .modals {
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .modal {
     background-color: #FFF;
+    flex: 1;
+    min-width: 250px;
     border-radius: 5px;
     margin-right: 30px;
     padding: 0 35px 35px 35px;
@@ -286,6 +335,7 @@ footer {
 
 .footer {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 60px 0;
 }
@@ -300,10 +350,19 @@ footer a:hover {
 
 .footerNav {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .footerNav ul {
     display: flex;
     flex-direction: column;
-    margin-right: 60px;
+    margin-right: 100px;
+}
+
+.footerNav li {
+    margin-bottom: 10px;
+}
+
+.socialLinks li {
+    margin-right: 25px;
 }
