--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,57 @@ nav {
     margin-left: 40px;
 }
 
+.menuBtnBurger {
+    width: 25px;
+    height: 4px;
+    background-color: hsl(257, 7%, 63%);
+    border-radius: 5px;
+    transition: all .5s ease-in-out;
+}
+
+.menuBtn {
+    position: relative;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    transition: all .5s ease-in-out;
+}
+
+.menuBtnBurger::before,
+.menuBtnBurger::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 4px;
+    background-color: hsl(257, 7%, 63%);
+    border-radius: 5px;
+    transition: all .5s ease-in-out;
+}
+
+.menuBtnBurger::before {
+    transform: translateY(-10px);
+}
+
+.menuBtnBurger::after {
+    transform: translateY(10px);
+}
+
+.menuBtn.open .menuBtnBurger {
+    transform: translateX(-50px);
+    background: transparent;
+}
+
+.menuBtn.open .menuBtnBurger::before {
+    transform: rotate(45deg) translate(35px, -35px);
+}
+
+.menuBtn.open .menuBtnBurger::after {
+    transform: rotate(-45deg) translate(35px, 35px);
+}
+
 .mainHeader {
     display: flex;
     height: 80vh;
@@ -277,6 +328,7 @@ input.invalid::placeholder {
     padding: 20px;
     margin-top: 20px;
     border-radius: 10px;
+    overflow: hidden;
 }
 
 .link div {
@@ -299,14 +351,15 @@ input.invalid::placeholder {
     display: inline-block;
     position: relative;
     background: linear-gradient(-90deg, white 20%, transparent);
-    left: -70px;
+    left: -60px;
     width: 60px;
-    height: 30px;
+    height: 32px;
 }
 
 .shortLink {
     color: hsl(180, 66%, 49%);
     min-width: 250px;
+    white-space: nowrap;
 }
 
 .copyButton {
@@ -532,6 +585,68 @@ footer a:hover {
         display: none;
     }
 
+    .menuBtn {
+        display: flex;
+        z-index: 3;
+    }
+
+    .menu.toggleCls {
+        display: flex;
+        position: absolute;
+        top: 80px;
+        right: 30px;
+        flex-direction: column;
+        border-radius: 10px;
+        width: 80%;
+        background-color: hsl(257, 27%, 26%);
+        z-index: 2;
+        padding: 40px;
+    }
+
+    .userLogin.toggleCls {
+        display: flex;
+        position: absolute;
+        top: 310px;
+        right: 30px;
+        flex-direction: column;
+        border-radius: 10px;
+        width: 80%;
+        background-color: hsl(257, 27%, 26%);
+        z-index: 3;
+        padding: 0 40px 40px;
+    }
+
+    .userLogin li {
+        margin: 20px 0;
+    }
+
+    .userLogin {
+        align-items: stretch;
+        text-align: center;
+    }
+
+    .menu a,
+    .userLogin a {
+        color: white;
+    }
+
+    .signUpBtn {
+        display: grid;
+    }
+
+    .userLogin::before {
+        content: '';
+        display: block;
+        background-color: hsl(257, 7%, 63%);
+        height: 1px;
+        width: 100%;
+        opacity: 0.5;
+    }
+
+    .menu li {
+        margin: 18px 0;
+    }
+
     .mainHeader {
         height: 100vh;
         flex-direction: column-reverse;
@@ -607,6 +722,16 @@ footer a:hover {
         margin-top: 15px;
     }
 
+    .mainContentText {
+        text-align: center;
+        width: 100%;
+    }
+
+    .image {
+        display: inline-grid;
+        justify-self: center;
+    }
+
     .footerLogo {
         margin: 0 40px 40px 0;
     }
@@ -627,13 +752,12 @@ footer a:hover {
         text-align: center;
     }
 
-    .image {
-        justify-self: center;
+    .headerText p {
+        width: 100%;
     }
 
-    .mainContentText {
-        text-align: center;
-        width: 100%;
+    .boostSection h2 {
+        font-size: 1.5rem;
     }
 
     .footer {
