--- a/styles.css
+++ b/styles.css
@@ -328,32 +328,25 @@ input.invalid::placeholder {
     padding: 20px;
     margin-top: 20px;
     border-radius: 10px;
-    overflow: hidden;
 }
 
 .link div {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    min-width: 0;
+    margin-right: 30px;
 }
 
 .originalLink {
     color: hsl(260, 8%, 14%);
     display: flex;
     align-items: center;
-    max-width: 950px;
-    white-space: nowrap;
     overflow: hidden;
-}
-
-.shortLink::before {
-    content: '';
-    display: inline-block;
-    position: relative;
-    background: linear-gradient(-90deg, white 20%, transparent);
-    left: -60px;
-    width: 60px;
-    height: 32px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    min-width: 0;
+    max-width: 900px;
 }
 
 .shortLink {
@@ -368,7 +361,6 @@ input.invalid::placeholder {
     background-color: hsl(180, 66%, 49%);
     border-radius: 8px;
     padding: 10px 30px;
-    margin-left: 30px;
     max-width: 200px;
     cursor: pointer;
 }
@@ -515,12 +507,31 @@ footer a:hover {
     .headerImg {
         width: 50%;
     }
+
+    .shortLink {
+        padding-left: 20px;
+    }
 }
 
 @media (max-width: 1450px) {
     .headerImg {
         width: 57%;
     }
+
+
+    .originalLink {
+        position: relative;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+    }
+
+    .shortLink {
+        position: relative;
+        margin: 20px 0;
+    }
+
 
     .footerNav {
         right: -100px;
@@ -545,6 +556,34 @@ footer a:hover {
     .headerImg {
         width: 65%;
     }
+
+    .link {
+        flex-direction: column;
+    } 
+
+    .link div {
+        flex-direction: column;
+    }
+
+    .shortLink {
+        padding-left: 0;
+    }
+
+    .shortLink::before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0px;
+        top: -8px;
+        height: 2px;
+        width: 100%;
+        background: hsl(0, 0%, 90%);
+    }
+
+    .copyButton {
+        max-width: none;
+        width: 100%;
+    } 
 
     .modals {
         flex-direction: column;
@@ -701,11 +740,16 @@ footer a:hover {
         width: 120%;
     }
 
+    .formSection {
+        height: min-content;
+        padding: 20px;
+    }
+
     .form {
         flex-direction: column;
         flex-wrap: nowrap;
         height: initial;
-        margin: 0 30px
+        margin: 0;
     }
 
     .form input,
@@ -719,6 +763,11 @@ footer a:hover {
     }
 
     .shortenButton {
+        margin-top: 15px;
+    }
+
+    .loader {
+        margin-left: 0;
         margin-top: 15px;
     }
 
